add deploy, fix text blocks, add disqus

--- a/content/2013-06-django.md
+++ b/content/2013-06-django.md
@@ -16,21 +16,25 @@ as the django site, and blog.example.com as the wordpress site.
 
 Install dependencies. I use a standard apache/mysql/python stack:
 
+    :::text
     sudo apt-get install apache2 libapache2-mod-wsgi python python-pip
     mysql-server python-mysqldb
     pip install django
 
 Create your Django project somewhere:
 
+    :::text
     cd /usr/local/src/
     sudo django-admin.py startproject myproject
 
 Next, create an apache config for your main site:
 
+    :::text
     touch /etc/apache2/sites-enabled/example.com  
 
 and put this in it:
 
+    :::text
     <VirtualHost *:80>
     ServerName example.com
     WSGIScriptAlias / /var/www/apache/django.wsgi
@@ -42,6 +46,7 @@ and put this in it:
 
 Create a wsgi file:
 
+    :::text
     touch /var/www/apache/django.wsgi  
 
 and put this in it:
@@ -58,12 +63,14 @@ and put this in it:
 
 Set some permissions:
 
+    :::text
     chmod o+r /var/www/apache/django.wsgi  
     chmod o+rx /var/www/apache  
     chmod o+rx /usr/local/src  
 
 Restart apache:
 
+    :::text
     sudo /etc/init.d/apache2 reload  
     sudo /etc/init.d/apache2 restart  
 
@@ -76,10 +83,12 @@ Next up is wordpress on a subdomain. Follow the directions [here][1].
 
 After that, we still need to configure apache for this site:
 
+    :::text
     touch /etc/apache2/sites-enabled/blog.example.com  
 
 Put this in it:
 
+    :::text
     <VirtualHost *:80>  
     ServerName blog.example.com  
     DocumentRoot /var/www/wordpress  
