fix link in post

--- a/content/2014-01-goals.md
+++ b/content/2014-01-goals.md
@@ -6,7 +6,7 @@ Tags: personal
 2013 was a pretty good year. Here are some things I did:
 
 * Started blogging
-* Experienced the [death of a startup]({filename}/2013-06-startup.md) and saw the birth of a [new one](thegenesisblock.com)
+* Experienced the [death of a startup]({filename}/2013-06-startup.md) and saw the birth of a [new one](http://thegenesisblock.com)
 * [Interviewed]({filename}/2013-07-interviews.md) a bunch of companies and got a [new job]({filename}/2013-08-jobs.md)
 * Learned all sorts of new languages and frameworks: Ruby, Scala, Node.js, Angular.js, d3.js
 * Learned about a variety of topics, including financial markets, crypotgraphy, and macroeconomics
