--- a/content/2014-01-goals.md
+++ b/content/2014-01-goals.md
@@ -9,7 +9,7 @@ Tags: personal
 * Experienced the [death of a startup]({filename}/2013-06-startup.md) and saw the birth of a [new one](http://thegenesisblock.com)
 * [Interviewed]({filename}/2013-07-interviews.md) a bunch of companies and got a [new job]({filename}/2013-08-jobs.md)
 * Learned all sorts of new languages and frameworks: Ruby, Scala, Node.js, Angular.js, d3.js
-* Learned about a variety of topics, including financial markets, crypotgraphy, and macroeconomics
+* Learned about a variety of topics, including financial markets, cryptography, and macroeconomics
 * Completed a Coursera class
 * Made the front page of Hacker News by [being dumb]({filename}/2013-11-hacked.md)
 * Made my first [open source contribution](https://github.com/omab/python-social-auth/commit/442ca5ec3ec140268dc34e589a8277d81547478f)
