edit post - mac

--- a/content/2013-12-macs.md
+++ b/content/2013-12-macs.md
@@ -27,3 +27,9 @@ A few days later it's Black Friday. I had been looking at Macbook Pros, waiting 
 * The settings are way too limited. This is general problem with Apple devices. I need _another app_ to clean up my menu bar?
 
 Overall, my main complaints with the Macbook Pro are with OSX. I might try installing a Linux distro on it, but none of the desktops I've tried were any better than OSX. For now I'll just keep using it and hopefully get used to the minor annoyances.
+
+**Edit:** I've found more things to dislike.
+
+* Finder still sucks. In thumbnail mode, grid doesn't resize to your window size. There's no way to set default views for specific folders. You can't cut files.
+* Preview only opens one image at a time. In windows, you can just open one image and use left/right to change images. You can't in Mac. You also can't delete. Editing the image is permanent - there's no confirmation of any sort.
+* Yes, I know you can preview an image with space, but that also sucks. Navigating by grid? Really?
