fix image order in 2013-08-jobs

--- a/content/2013-08-jobs.md
+++ b/content/2013-08-jobs.md
@@ -32,9 +32,9 @@ rely on my school to tell me about it. Towards the end of the job search
 I also used other sources like the Github jobs board. 5% of the jobs I
 applied for were inbound, coming from recruiters on LinkedIn.
 
-Now, let's take a look at this year.
+# Looking at 2013
 
-[![2013 Job Statuses]({filename}/images/2013-statuses.png)]({filename}/images/2013-statuses.png)
+[![2013 Job Sources]({filename}/images/2013-sources.png)]({filename}/images/2013-sources.png)
 
 After being in the industry for a
 year, I didn't need career services anymore. The majority of my jobs
@@ -49,7 +49,7 @@ within 3 hours of posting it, I received **9 calls** from recruiters.
 Most of the jobs that these recruiters were offering were either not
 relevant at all or were simply not interesting to me.
 
-[![2013 Job Sources]({filename}/images/2013-sources.png)]({filename}/images/2013-sources.png)
+[![2013 Job Statuses]({filename}/images/2013-statuses.png)]({filename}/images/2013-statuses.png)
 
 This time, most jobs responded to
 me. Even in the no response category, some of the companies talked to me
